# ds-rs

./: Cargo.toml  README.md  index.html
src/: main.rs  templates.rs
