[package]
name = "ds-rs"
version = "0.1.0"
description = "dbmon using datastar and rust"
authors = ["Martin Clausern"]
license = ""
repository = ""
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
datastar = { path = "datastar-sdk", features = ["rocket"] }
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
rand = "0.9.0"
maud = "*"